--- a/42.html
+++ b/42.html
@@ -10,12 +10,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href=" style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main>
-      <p>Изученные CSS свойства</p>
-      <ul>
+    <main class="font">
+      <p class="green">Изученные CSS свойства</p>
+      <ul class="orange">
         <li>width - ширина блока, не применяется для инлайновых элементов</li>
         <li>height - высота блока, не применяется для инлайновых элементов</li>
         <li>display - определяет, как элемент должен быть показан в документе</li>
